--- a/src/Stylesheets/Tweets/newTweetForm.scss
+++ b/src/Stylesheets/Tweets/newTweetForm.scss
@@ -1,12 +1,28 @@
+$black: #000;
+$blue: #0000ee;
+$light-grey: #8899a6;
+$dark-grey: #14171a;
+$black-pearl: #15202b;
+$grey-pearl: #192734;
+$white: #ffffff;
+$light-blue: #1da1f2;
+$strong-blue: #1b95e0;
+$green: #17bf63;
+$red: #e0245e;
+$dg: #262626;
 $lg: #eee;
 
-.new-tweet-form {
-  background-color: $lg;
+form.new-tweet-form {
+  color: $white;
   padding: 1vw;
   width: 100%;
   height: 25vh;
+  ::placeholder {
+    color: $lg;
+  }
   .tweet-form-content-div {
     width: 100%;
+    height: 50%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -18,15 +34,37 @@ $lg: #eee;
       border-radius: 100%;
     }
     textarea {
-      border: 1px solid white;
-      height: 50%;
+      border: none;
+      // height: 65%;
       width: 80%;
       display: flex;
       resize: none;
       padding: 1vw;
+      font-size: 18px;
+      background-color: inherit;
+      color: $white;
       &:focus {
         outline: 0;
       }
+    }
+  }
+  .tweet-form-buttons-div {
+    display: flex;
+    padding: 0 20px;
+    justify-content: flex-end;
+    align-items: center;
+
+    width: 100%;
+
+    input {
+      background-color: $strong-blue;
+      color: $white;
+      border-radius: 50px;
+      font-weight: bold;
+      font-size: 15px;
+      padding: 20px;
+      width: 130px;
+      margin-left: 30px;
     }
   }
 }
