--- a/src/Stylesheets/master.scss
+++ b/src/Stylesheets/master.scss
@@ -16,6 +16,7 @@ $lg: #eee;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 html,
